force-app/main/default/objects/B2B_Store_Defaults__mdt/B2B_Store_Defaults__mdt.object-meta.xml
<CustomObject>
    <label>B2B Store Defaults</label>
    <pluralLabel>B2B Store Defaults</pluralLabel>
    <description>Stores environment-specific configuration for B2B Commerce custom components including category IDs, field API names, and filter settings</description>
</CustomObject>