force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Field__c</fullName>
    <label>Account Field API Name</label>
    <description>API name of the Account lookup field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>