force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Authenticated_Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Authenticated_Price_Book_ID__c</fullName>
    <label>Authenticated Price Book ID</label>
    <description>The Salesforce Pricebook2 ID to use for authenticated shop shopper users in Quick Turn category</description>
    <type>Text</type>
    <length>18</length>
</CustomField>