force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field__c</fullName>
    <label>Contact Field API Name</label>
    <description>API name of the Contact lookup field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>