force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Default_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Page_Size__c</fullName>
    <label>Default Page Size</label>
    <description>Default number of products per page</description>
    <type>Number</type>

</CustomField>