force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Detail_URL_Slug__c.field-meta.xml
<CustomField>
    <fullName>Detail_URL_Slug__c</fullName>
    <label>Detail URL Slug</label>
    <description>URL slug that maps to My Products</description>
    <type>Text</type>
    <length>255</length>
</CustomField>