force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Dri_Duck_Label__c.field-meta.xml
<CustomField>
    <fullName>Dri_Duck_Label__c</fullName>
    <label>Dri-Duck Program Label</label>
    <description>Display label for Dri-Duck program</description>
    <type>Text</type>
    <length>255</length>
</CustomField>