force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Dri_Duck_Value__c.field-meta.xml
<CustomField>
    <fullName>Dri_Duck_Value__c</fullName>
    <label>Dri-Duck Program Value</label>
    <description>Value for Dri-Duck special program filter</description>
    <type>Text</type>
    <length>255</length>
</CustomField>