force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/End_User_Field__c.field-meta.xml
<CustomField>
    <fullName>End_User_Field__c</fullName>
    <label>End User Field API Name</label>
    <description>API name of the End User lookup field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>