force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Filter_Values_Limit__c.field-meta.xml
<CustomField>
    <fullName>Filter_Values_Limit__c</fullName>
    <label>Filter Values Query Limit</label>
    <description>Max records to query for filter values</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>