force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Guest_Browser_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Guest_Browser_Profile_Id__c</fullName>
    <label>Guest Browser Profile ID</label>
    <description>The Salesforce Profile ID for guest browser users</description>
    <type>Text</type>
    <length>18</length>
</CustomField>