force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/GuestPricebookID__c.field-meta.xml
<CustomField>
    <fullName>GuestPricebookID__c</fullName>
    <label>Guest Pricebook ID</label>
    <description>The Salesforce Pricebook2 ID to use for guest users in Quick Turn category</description>
    <type>Text</type>
    <length>18</length>
</CustomField>