force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Is_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Field__c</fullName>
    <label>Is Parent Field API Name</label>
    <description>API name of the Is Parent field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>