force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/My_Products_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>My_Products_Category_ID__c</fullName>
    <label>My Products Category ID</label>
    <description>The Salesforce ID for the My Products category</description>
    <type>Text</type>
    <length>18</length>
</CustomField>