force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/My_Products_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>My_Products_Category_Name__c</fullName>
    <label>My Products Category Name</label>
    <description>Display name for My Products category</description>
    <type>Text</type>
    <length>255</length>
</CustomField>