force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/My_Products_URL_Slug__c.field-meta.xml
<CustomField>
    <fullName>My_Products_URL_Slug__c</fullName>
    <label>My Products URL Slug</label>
    <description>URL slug for My Products category</description>
    <type>Text</type>
    <length>255</length>
</CustomField>