force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Panels_Field__c.field-meta.xml
<CustomField>
    <fullName>Panels_Field__c</fullName>
    <label>Panels Field API Name</label>
    <description>API name of the Panels field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>