force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Parent_Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Value__c</fullName>
    <label>Parent Product Value</label>
    <description>Value indicating a parent product in Is_Parent__c field</description>
    <type>Text</type>
    <length>50</length>
</CustomField>