force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Profile_Field__c.field-meta.xml
<CustomField>
    <fullName>Profile_Field__c</fullName>
    <label>Profile Field API Name</label>
    <description>API name of the Profile field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>