force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Quick_Turn_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Quick_Turn_Category_ID__c</fullName>
    <label>Quick Turn Category ID</label>
    <description>The Salesforce ID for the Quick Turn (Essentials) category</description>
    <type>Text</type>
    <length>18</length>
</CustomField>