force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Quick_Turn_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Quick_Turn_Category_Name__c</fullName>
    <label>Quick Turn Category Name</label>
    <description>Display name for Quick Turn category</description>
    <type>Text</type>
    <length>255</length>
</CustomField>