force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Quick_Turn_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Quick_Turn_Page_Size__c</fullName>
    <label>Quick Turn Page Size</label>
    <description>Page size for Quick Turn filtered queries</description>
    <type>Number</type>

</CustomField>