force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Quick_Turn_URL_Slug__c.field-meta.xml
<CustomField>
    <fullName>Quick_Turn_URL_Slug__c</fullName>
    <label>Quick Turn URL Slug</label>
    <description>URL slug for Quick Turn category</description>
    <type>Text</type>
    <length>255</length>
</CustomField>