force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Rush_Ready_Field__c.field-meta.xml
<CustomField>
    <fullName>Rush_Ready_Field__c</fullName>
    <label>Rush Ready Field API Name</label>
    <description>API name of the Rush Ready field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>