force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Rush_Ready_Label__c.field-meta.xml
<CustomField>
    <fullName>Rush_Ready_Label__c</fullName>
    <label>Rush Ready Program Label</label>
    <description>Display label for Rush Ready program</description>
    <type>Text</type>
    <length>255</length>
</CustomField>