force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Rush_Ready_Value__c.field-meta.xml
<CustomField>
    <fullName>Rush_Ready_Value__c</fullName>
    <label>Rush Ready Program Value</label>
    <description>Value for Rush Ready special program filter</description>
    <type>Text</type>
    <length>255</length>
</CustomField>