force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Shape_Field__c.field-meta.xml
<CustomField>
    <fullName>Shape_Field__c</fullName>
    <label>Shape Field API Name</label>
    <description>API name of the Shape field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>