force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Shop_Shopper_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Shop_Shopper_Profile_ID__c</fullName>
    <label>Shop Shopper Profile ID</label>
    <description>The Salesforce Profile ID for authenticated shop shopper users</description>
    <type>Text</type>
    <length>18</length>
</CustomField>