force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Simple_Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Simple_Product_Class__c</fullName>
    <label>Simple Product Class Value</label>
    <description>Value for Simple product class</description>
    <type>Text</type>
    <length>50</length>
</CustomField>