force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Special_Program_Field__c.field-meta.xml
<CustomField>
    <fullName>Special_Program_Field__c</fullName>
    <label>Special Program Field API Name</label>
    <description>API name of the Special Program field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>