force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Structure_Field__c.field-meta.xml
<CustomField>
    <fullName>Structure_Field__c</fullName>
    <label>Structure Field API Name</label>
    <description>API name of the Structure field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>