force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/Visor_Field__c.field-meta.xml
<CustomField>
    <fullName>Visor_Field__c</fullName>
    <label>Visor Field API Name</label>
    <description>API name of the Visor field on Product2</description>
    <type>Text</type>
    <length>255</length>
</CustomField>