force-app/main/default/objects/B2B_Store_Defaults__mdt/fields/WebStoreId__c.field-meta.xml
<CustomField>
    <fullName>WebStoreId__c</fullName>
    <label>WebStore ID</label>
    <description>The Salesforce ID for the B2B Commerce WebStore</description>
    <type>Text</type>
    <length>18</length>
</CustomField>